   [cyocum])

### Changed
* Pass the content type of a docstring down into its pickle string form
  ([#292](https://github.com/cucumber/cucumber/pull/292)
   [rjwittams])
* Fixed Russian equivalents of `Given` and `Then`. ([#369](https://github.com/cucumber/cucumber/pull/369) [cerebellum13](https://github.com/cerebellum13))

### Deprecated

### Removed

### Fixed

* (Go) fixes validation for go vet tool on latest versions
  ([#330](https://github.com/cucumber/cucumber/pull/330)
   [l3pp4rd])
* (Ruby) removed unneeded files from the gem

## [5.0.0] - 2017-10-13

### Added
* Ability to specify an initial language for the parser, so that the `# language` header isn't required
  ([#288](https://github.com/cucumber/cucumber/pull/288)
   by [charlierudolph] and [aslakhellesoy])
* A better wording for the Greek translation of `Scenario Outline` (`Περίγραμμα Σεναρίου`)
  ([#185](https://github.com/cucumber/cucumber/pull/185) by [pmatsinopoulos])
* Added female, singular `Given` in Romanian (`Dată fiind`)
  ([#202](https://github.com/cucumber/cucumber/pull/202) by [tsundberg])
* (C) CMake support
  ([#2](https://github.com/cucumber/gherkin-c/issues/2)
   [#3](https://github.com/cucumber/gherkin-c/pull/3)
   by [Pwera])

### Changed
* Compile empty scenarios to empty pickles
  ([#249](https://github.com/cucumber/cucumber/issues/249)
   [#264](https://github.com/cucumber/cucumber/pull/264)
   by [brasmusson])

## [4.1.3] - 2017-05-04

### Added
* (Go) Implement CLI
  ([#145](https://github.com/cucumber/cucumber/issues/145)
   [#162](https://github.com/cucumber/cucumber/pull/162)
   by [l3pp4rd])

### Fixed
* (JavaScript) Fix gherkin/javascript/examples so Gherkin loads in browser
  ([#197](https://github.com/cucumber/cucumber/pull/197)
   by [aslakhellesoy])
* (JavaScript) Don't depend on fs in the library
  ([#196](https://github.com/cucumber/cucumber/pull/196)
   by [aslakhellesoy])
* (Python) Fix executable
  ([#194](https://github.com/cucumber/cucumber/pull/194)