@@ -8,5 +8,10 @@ language: java
 jdk:
   - oraclejdk8
   - oraclejdk9
+  - oraclejdk10
+
+matrix:
+  allow_failures:
+    - jdk: "oraclejdk10"
 
 script: make default
