@@ -6,6 +6,7 @@
 sudo: false
 language: node_js
 node_js:
+  - "10"
   - "9"
   - "8"
   - "6"
